[metadata]
name = habitat-sim-api
version = 0.2.2
description = Type stubs for habitat_sim public interface
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Unknown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Typing :: Typed
    Intended Audience :: Developers

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
* = *.pyi, py.typed, LICENSE, README.md

[options.packages.find]
where = .
